--- a/style.css
+++ b/style.css
@@ -185,7 +185,20 @@ color: #669999;
 /******* Style reformating for different screen sizes *********/
 /******* Only tested on laptop 13" display ********************/
 
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 510px) {
+
+    .meet_migma {
+      font-size: 25px;
+      transform: translate(-50%, -150%);
+    }
+
+    .subtext {
+      font-size: 15px;
+      transform: translate(-50%, -130%);
+    }
+}
+
+@media screen and (min_width: 511px) and (max-width: 640px) {
 
     .meet_migma {
       font-size: 35px;
@@ -204,11 +217,6 @@ color: #669999;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-    }
-
-
-    .navbar-default {
-      position:static;
     }
 }
 
