Added phone compatability

--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ color: #669999;
 /******* Style reformating for different screen sizes *********/
 /******* Only tested on laptop 13" display ********************/
 
-@media screen and (mid-width: 450px) and (max-width: 510px) {
+@media screen and (max-width: 449px) {
 
     .meet_migma {
       font-size: 30px;
@@ -197,7 +197,7 @@ color: #669999;
     }
 }
 
-@media screen and (max-width: 510px) {
+@media screen and (min-width: 450px) and (max-width: 510px) {
 
     .meet_migma {
       font-size: 25px;
