--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 .navbar a {
   padding-left:5px;
   font-size: 20px;
-	color: #7a7a7a;
+	color: #727171;
 }
 
 .navbar a:hover {
@@ -55,7 +55,7 @@
 /********** Section title styling *********/
 
 .grey_header {
-  color: #7a7a7a;
+  color: #727171;
   text-align: left;
   padding-left: 20px;
   padding-bottom: 40px;
@@ -131,7 +131,7 @@ color: #669999;
   margin-left: 10%;
   margin-right: 10%;
   text-align: center;
-  color: #7a7a7a;
+  color: #727171;
 }
 
 .email {
@@ -142,8 +142,8 @@ color: #669999;
 }
 
 .grey_text {
-  background-color: #F2f2f2;
-  color:#7a7a7a;
+  background-color: #f2f2f2;
+  color:#727171;
   padding: 20px 40px;
 }
 /*****************************************/
@@ -159,7 +159,7 @@ color: #669999;
 }
 
 .setup1 {
-  color: #7a7a7a;
+  color: #727171;
   text-align: center;
 }
 
